# symlisp

./: CMakeLists.txt  CONTRIBUTING.md  OVERVIEW.md  README.md  todos.md
.github/workflows/: ci.yml
examples/: symlisp_demo.ipynb
jupyter_kernel/: CMakeLists.txt  README.md  kernel.json.in  pyproject.toml  symlisp_kernel.py
jupyter_kernel/symlisp_kernel/: __init__.py  __main__.py  install.py  kernel.py  symlisp_wrapper.py
mcp_symlisp/: CMakeLists.txt  interactive_test.sh  mcp_jsonrpc.c  mcp_jsonrpc.h  mcp_symlisp.c  test_mcp.sh
repl/: CMakeLists.txt  symlisp.c
stdsymlisp/: algos.scm  infix.scm  lists.scm  symbolics.scm  testing.scm
symlisplib/: CMakeLists.txt  sl_builtins.c  sl_builtins.h  sl_core.c  sl_core.h  sl_env.c  sl_env.h  sl_eval.c  sl_eval.h  sl_higher_order.c  sl_higher_order.h  sl_output.c  sl_output.h  sl_parse.c  sl_parse.h  sl_predicates.c  sl_predicates.h  sl_strings.c  sl_strings.h  sl_unicode_case.c  sl_unicode_case.h
tests/: CMakeLists.txt  debug_gc.py  run_tests.scm  symlisp_tester.c
tests/testcases/: aa_basics.scm  arithmetic.scm  bindings.scm  comparisons.scm  core_forms.scm  evals.scm  higher_order.scm  infix_tokenizer.scm  io_load.scm  list_ops.scm  loops.scm  macros.scm  math.scm  predicates.scm  scoping.scm  simple_math.scm  strings.scm  symbolics_tests.scm  symbolics_tests_quick.scm  time_rnd.scm
tests/testcases/data/: load_target.scm
