[project]
name = "symlisp_jupyter_kernel"
version = "0.1.0"
description = "A Jupyter kernel for SymLisp."
requires-python = ">=3.11"

dependencies = [
    "jupyter_client>=7.0", # For testing the kernel connection
    "ipykernel>=6.0", # Provides tools and infrastructure for kernels # Python bindings for ZeroMQ
    "pyzmq>=20.0",
    "jupyterlab>=4.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kernel"]
