[project]
name = "symlisp_kernel"
version = "0.1.0"
description = "Jupyter kernel for SymLisp"
authors = [
    {name = "SymLisp Team", email = "you@example.com"}
]
requires-python = ">=3.8"
dependencies = [
    "jupyter",
    "jupyter_client",
    "ipykernel",
    "jupyterlab",
    "cffi"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
